--- a/style.css
+++ b/style.css
@@ -1,6 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
-
-
 * {
     margin: 0;
     padding: 0;
@@ -59,22 +56,90 @@ body {
 }
 .text-section {
     margin-left: 7rem;
-    width: 69.5%;
+    width: 70%;
 }
 .know-text,
 .sign-up-text,
-.about-text,
-form {
+.about-text{
     font-family: "Roboto", sans-serif;
-    font-size: 1.4rem;
-    font-weight: 500;
+    font-size: 1.45rem;
+    font-weight: 800;
+    line-height: 2rem;
 }
-.know-text {
-    margin-top: 30px;
-}
-form {
-    margin-top: 100px;
-    width: 100%;
-    height: 30%;
+.form-card {
     background-color: white;
+    padding: 2rem;
+    width: 100%;
+    margin: 3rem auto 0;
+    box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+}
+fieldset {
+    border: 0;
+}
+legend {
+    font-size: 1.5rem;
+    font-weight: bold;
+    margin-bottom: 1.5rem;
+    font-family: "Roberto", sans-serif;
+}
+.input-row {
+    display: flex;
+    gap: 2rem;
+    margin-bottom: 1rem;
+}
+.input-group {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+.input-group label {
+    font-family: 'Roberto', sans-serif;
+    font-size: .8rem;
+    color: #444;
+}
+.input-group input {
+    padding: 0.5rem;
+    border: 1px solid #E5E7EB;
+    border-radius: 4px;
+    font-family: "Roboto", sans-serif;
+}
+input:focus {
+    border: 2px solid #1d4ed8; 
+    box-shadow: 0 0 4px rgba(29, 78, 216, 0.4); 
+    outline: none;
+  }  
+input[type="password"]:invalid {
+    border: 1px solid red;
+  }
+.create-account-btn {
+    width: 25%;
+    background-color: #596D48;
+    color: white;
+    font-weight: bold;
+    padding: 12px 24px;
+    border: none;
+    border-radius: 6px;
+    font-size: 1rem;
+    cursor: pointer;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+    margin: 2rem 10%;
+}
+.create-account-btn:hover {
+    background-color: #47573a;
+}
+.login-prompt {
+    font-family: 'Roboto', sans-serif;
+    font-size: 1.2rem;
+    color: #333;
+    margin: 0 10%;
+}
+
+.login-link {
+    color: #596D48;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.login-link:hover {
+    text-decoration: underline;
 }
